added fix for color of links in footer

--- a/src/components/core/AppFooter/_AppFooter.scss
+++ b/src/components/core/AppFooter/_AppFooter.scss
@@ -108,6 +108,7 @@
         &__label {
             font-size: .6em;
             padding: 5px;
+            color:rgba(8,27,51,.8);
         }
     }
 }
