--- a/src/components/core/AppNav/_AppNav.scss
+++ b/src/components/core/AppNav/_AppNav.scss
@@ -1,252 +1,291 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .nav {
-    position: fixed;
-    top: 0;
-    left: 0;
     color: #fff;
-    height: 100px;
+    height: 200px;
     width: 100%;
     z-index: 6;
-    transition: .5s;
     background-color: transparent;
-    opacity: .9;
     font-family: 'Open Sans' , sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+
+    @media only screen and (max-width: 900px) {    
+       height: 100vh;
+       justify-content: flex-start;
+    }
 
     &--hidden {
         display: none;
     }
 
     &__menu {
-        &--wrapper {
-            display: none;
+        display: none;
+
+        @media only screen and (max-width: 900px) {    
+            display: flex;
+            position: relative;
+            height: 100px;
+            width: 100%;
+            position: absolute;
+            align-items: center;
+        }
+
+        &--button {
+
+            @media only screen and (max-width: 900px) {
+                position: absolute;
+                right: 0;
+                cursor: pointer;
+                margin-right: 10%;
+                z-index: 9999;
+            }
+
+        }
+
+        &--icon {
+
+            @media only screen and (max-width: 900px) {
+                display: block;
+                width: 26px;
+                height: 3px;
+                background: #1dbac9;
+                border-radius: 2px;
+
+                &:nth-child(2) {
+                    margin-top: 4px;
+                }
+
+                &:nth-child(3) {
+                    margin-top: 4px;
+                }
+            }
+        }
+
+        &__logo {
+            height: 35px;
+
+            @media only screen and (max-width: 900px) {
+                margin-left: 8%;
+             }
         }
     }
 
     &__logo {
         height: 45px;
         align-self: center;
+        margin-bottom: 1%;
 
         @media only screen and (max-width: 1220px) {
             height: 35px;
         }
 
-        &--wrapper {
-            height: 100px;
-            margin-left: 10%;
-            display: flex;
+        @media only screen and (max-width: 900px) {
+           display: none;
         }
     }
 
     &__list {
 
-        &--wrapper {
-            position: fixed;
-            top: 0;
-            right: 0;
-            height: 100px;
-            width: 100%;
-            margin-right: 10%;
+        @media only screen and (max-width: 1440px) and (max-height: 1400px) {
+            font-size: .75em;
         }
 
-        &__ul {
+        @media only screen and (max-width: 900px) {
+            transition: all 0.3s ease;
+            z-index: -999;    
+            width: 100%;
+        }
+
+        &--wrapper {
             display: flex;
             align-items: center;
             justify-content: flex-end;
-            height: 100px;
             font-size: .65em;
 
-            &--item {
-                align-items: center;
-                list-style-type: none;
-                text-transform: uppercase;
+            @media only screen and (max-width: 900px) {
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                font-size: .7em;
+            }
+        }
 
-                &:first-child {
-                    padding-right: 40px;
-                }
+        &--item {
+            align-items: center;
+            list-style-type: none;
+            text-transform: uppercase;
+            width: fit-content;
 
-                &:nth-child(2){
-                    padding-right: 40px;
-                }
+            @media only screen and (max-width: 570px) { 
+                margin-top: 45%;
+                padding-right: 0px;
+            }
 
-                &:nth-child(3){
-                    padding-right: 40px;
-                }
+            &:first-child {
+                padding-right: 40px;
 
-                &:nth-child(4){
-                    padding-right: 40px;
+                @media only screen and (max-width: 900px) {
+                    margin: 30% 0 4% 0;
+                    padding-right: 0px;
                 }
             }
 
-            &--link {
-                font-size: 1.35em;
-                font-weight: 700;
-                line-height: 1.25;
-                letter-spacing: 0.02em;
-                color:rgba(8,27,51,.8);
-                text-decoration: none;  
-                
+            &:nth-child(2){
+                padding-right: 40px;
 
-                &:hover {
-                    color: #097e90;
+                @media only screen and (max-width: 900px) {
+                    margin: 0 0 4% 0;
+                    padding-right: 0px;
                 }
             }
+
+            &:nth-child(3){
+                padding-right: 40px;
+
+                @media only screen and (max-width: 900px) {
+                    margin: 0 0 4% 0;
+                    padding-right: 0px;
+                }
+            }
+
+            &:nth-child(4){
+                padding-right: 40px;
+
+                @media only screen and (max-width: 900px) {
+                    margin: 0 0 4% 0;
+                    padding-right: 0px;
+                }
+            }
+
+            &:nth-child(5){
+                padding-right: 40px;
+
+                @media only screen and (max-width: 900px) {
+                    margin: 0 0 4% 0;
+                    padding-right: 0px;
+                }
+            }
+
+            &:nth-child(6){
+                padding-right: 40px;
+
+                @media only screen and (max-width: 900px) {
+                    margin: 5% 0 1% 0;
+                    padding-right: 0px;
+                }
+            }
+        }
+
+        &--link {
+            font-size: 1.35em;
+            font-weight: 700;
+            line-height: 1.25;
+            letter-spacing: 0.02em;
+            color:rgba(8,27,51,.8);
+            text-decoration: none;  
+
+            @media only screen and (max-width: 900px) {    
+                display: none;
+                font-size: 1.8em;
+                opacity: 0;
+            }
+
+            @media only screen and (max-width: 570px) { 
+                font-size: 1.2em;
+            }
+
+            &:hover {
+                color: #097e90;
+            }
+        }
+    }
+
+    &--highlight {
+        color: #2fa5a7;
+    }
+
+    &__extra {
+        display: flex;
+        justify-content: center;  
+        margin-top: 2%;   
+
+        @media only screen and (max-width: 900px) { 
+           display: none;
+        }
+
+        &--item {
+            align-items: center;
+            list-style-type: none;
+            text-transform: uppercase;
+            width: fit-content;
+
+            @media only screen and (max-width: 570px) { 
+                margin-top: 45%;
+                padding-right: 0px;
+            }
+
+            &:first-child {
+                padding-right: 40px;
+
+                @media only screen and (max-width: 900px) {
+                    margin: 30% 0 4% 0;
+                    padding-right: 0px;
+                }
+            }
+
+            &:nth-child(2){
+
+                @media only screen and (max-width: 900px) {
+                    margin: 0 0 4% 0;
+                    padding-right: 0px;
+                }
+            }
+        }
+
+        &--link {
+            font-size: 1em;
+            font-weight: 400;
+            line-height: 1.25;
+            letter-spacing: 0.02em;
+            text-decoration: none;  
+
+            @media only screen and (max-width: 900px) {    
+                display: none;
+                font-size: 1.8em;
+                opacity: 0;
+            }
+
+            @media only screen and (max-width: 570px) { 
+                font-size: 1.2em;
+            }
+
+            &:hover {
+                color: #097e90;
+            }
+
         }
     }
 }
 
-#nav:checked ~ .nav__menu--wrapper .nav__list--wrapper .nav__list__ul {
-    display: flex;
-    flex-direction: column; 
-    height: 100vh;
-    width: 100%;
+.hidden {
+    display: none;
+
+    @media only screen and (max-width: 900px) {
+        display: block;
+    }
 }
 
-#nav:checked ~  .nav__list--wrapper .nav__list__ul .nav__list__ul--item .nav__list__ul--link {
+#nav:checked ~ .nav__list .nav__list--wrapper .nav__list--item .nav__list--link {
     opacity: 1;
     display: block;
     z-index: 7;
 }
 
-#nav:checked + .nav__menu--button i {
-    background: #fff;
-    transition: transform 0.2s ease;
-    box-shadow: none;
-}
-
-#nav:checked + .nav__menu--button i:nth-child(1) {
-    transform: translateY(14px) rotate(90deg);
-}
-
-#nav:checked + .nav__menu--button i:nth-child(2) {
-    opacity: 0;
-}
-
-#nav:checked + .nav__menu--button i:nth-child(3) {
-    transform:rotate(180deg);
-}
-
-#nav:checked ~ .nav__menu--wrapper .nav__list--wrapper .nav__list__ul {
-    display: flex;
-    flex-direction: column; 
-    height: 100vh;
-    width: 100%;
-}
-
-
-@media only screen and (max-width: 1440px) and (max-height: 1400px) {
-    .nav_list {
-        font-size: .75em;
-    }
- }
-
-@media only screen and (max-width: 1220px) {
-    .nav__list--wrapper {
-        left: 0;
-        transition: all 0.3s ease;
-        z-index: -1;
-    }
-
-    .nav__list__ul {
-        display: block;
-        text-align: center;
-        font-size: .7em;
-    }
-
-    .nav__list__ul--item:first-child {
-        margin: 30% 0 4% 0;
-        padding-right: 0px;
-    }
-
-    .nav__list__ul--item:nth-child(2){
-        margin: 0 0 4% 0;
-        padding-right: 0px;
-    }
-
-    .nav__list__ul--item:nth-child(3){
-        margin: 0 0 4% 0;
-        padding-right: 0px;
-    }
-
-    .nav__list__ul--item:nth-child(4){
-        margin: 0 0 4% 0;
-        padding-right: 0px;
-    }
-    
-    .nav__list__ul--link {
-        display: none;
-        font-size: 1.8em;
-        opacity: 0;
-    }
-
-    .nav__menu--wrapper {
-        display: flex;
-        height: 100px;
-        width: 100%;
-        position: fixed;
-        align-items: center;
-    }
-
-    .nav__menu--button {
-        position: fixed;
-        right: 0;
-        cursor: pointer;
-        margin-right: 10%;
-        z-index: 9999;
-    }
-
-    .nav__menu--button i {
-        display: block;
-        width: 26px;
-        height: 3px;
-        background: #1dbac9;
-        border-radius: 2px;
-    }
-
-    .nav__menu--button i:nth-child(2) {
-        margin-top: 4px;
-    }
-
-    .nav__menu--button i:nth-child(3) {
-        margin-top: 4px;
-    }
-
-    #nav:checked ~ .nav__list--wrapper {
-        height: 100vh;
-        background-color: #fff;
-    }
-}
-
-@media only screen and (max-width: 950px) {
-   .nav__logo__image {
-       display: none;
-   }
-
-   .nav__logo__text {
-       font-size: 1.7em
-   }
-}
-
-@media only screen and (max-width: 570px) { 
-    .nav__list__ul--item:first-child {
-        margin-top: 45%;
-        padding-right: 0px;
-    }
-
-    .nav__list__ul--link {
-        font-size: 1.2em;
-    }
-
-    .nav__logo__text {
-        font-size: 1.3em;
-    }
-}
-
-.active {
-    color: #f50;
+#nav:checked ~ .nav__list .nav__list--wrapper {
+    background-color: #fff;
 }
