--- a/src/components/core/AppNav/_AppNav.scss
+++ b/src/components/core/AppNav/_AppNav.scss
@@ -2,7 +2,7 @@
 
 .nav {
     color: #fff;
-    height: 200px;
+    height: 300px;
     width: 100%;
     z-index: 6;
     background-color: transparent;
@@ -76,9 +76,9 @@
     }
 
     &__logo {
-        height: 45px;
+        height: 55px;
         align-self: center;
-        margin-bottom: 1%;
+        margin-bottom: 1.5%;
 
         @media only screen and (max-width: 1220px) {
             height: 35px;
@@ -92,7 +92,7 @@
     &__list {
 
         @media only screen and (max-width: 1440px) and (max-height: 1400px) {
-            font-size: .75em;
+            font-size: 1em;
         }
 
         @media only screen and (max-width: 900px) {
@@ -105,13 +105,12 @@
             display: flex;
             align-items: center;
             justify-content: flex-end;
-            font-size: .65em;
+            font-size: .7em;
 
             @media only screen and (max-width: 900px) {
                 display: flex;
                 flex-direction: column;
                 text-align: center;
-                font-size: .7em;
             }
         }
 
