--- a/src/components/feature/VidHero/_VidHero.scss
+++ b/src/components/feature/VidHero/_VidHero.scss
@@ -1,10 +1,56 @@
+@import url('https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+
 .section {
     display: flex;
     width: 100%;
-    justify-content: center;
-    margin-top: 8%;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 16%;
 
     &__video {
         width: 770px;
     }
+
+    .content {
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+        margin: 0 8% 0 8%;
+
+        &__heading {
+            font-family: 'Bitter';
+            text-align: center;
+            font-size: 1.4em;
+            color: #081b33;
+            margin-bottom: 2.5%;
+        }
+
+        &__subhead {
+            font-family: 'Open Sans' , sans-serif;
+            font-style: italic;
+            font-size: .8em;
+            text-align: center;
+            color: rgba(8,27,51,.8);
+            margin-bottom: 3%;
+        }
+    
+        &__button {
+            color: #fff;
+            background-color: #0c5369;
+            border-color: #0c5369;
+            font-size: 16px;
+            font-weight: 600;
+            text-decoration: none;
+            text-transform: uppercase;
+            padding:16px 48px 18px;
+            border-radius: 500px;
+            width: fit-content;
+            align-self: center;
+            transition: .3s;
+            font-family: 'Open Sans', sans-serif;
+        }
+    }
+
 }
