--- a/src/components/core/AppNav/_AppNav.scss
+++ b/src/components/core/AppNav/_AppNav.scss
@@ -29,7 +29,7 @@
         @media only screen and (max-width: 900px) {    
             display: flex;
             position: relative;
-            height: 100px;
+            height: 200px;
             width: 100%;
             position: absolute;
             align-items: center;
@@ -287,6 +287,8 @@
 
 #nav:checked ~ .nav__list .nav__list--wrapper {
     background-color: #fff;
+    height: 100vh;
+    justify-content: flex-start;
 }
 
 .active {
