--- a/src/components/feature/Impact/_Impact.scss
+++ b/src/components/feature/Impact/_Impact.scss
@@ -14,6 +14,7 @@ h3  {
 }
 
 .icon {
+    margin-top: 5%;
     font-size: 1.2em;
     text-decoration: none;
     display: flex;
@@ -27,7 +28,7 @@ h3  {
 }
 
 .divid {
-    margin: 0 100px 0 100px;
+    margin: 5% 100px 0 100px;
 }
 
 .label {
