--- a/src/components/core/AppNav/_AppNav.scss
+++ b/src/components/core/AppNav/_AppNav.scss
@@ -2,7 +2,7 @@
 
 .nav {
     color: #fff;
-    height: 300px;
+    height: 350px;
     width: 100%;
     z-index: 6;
     background-color: transparent;
@@ -81,7 +81,7 @@
         margin-bottom: 1.5%;
 
         @media only screen and (max-width: 1220px) {
-            height: 35px;
+           margin-bottom: 3%;
         }
 
         @media only screen and (max-width: 900px) {
@@ -129,7 +129,7 @@
                 padding-right: 40px;
 
                 @media only screen and (max-width: 900px) {
-                    margin: 30% 0 4% 0;
+                    margin: 50% 0 4% 0;
                     padding-right: 0px;
                 }
             }
@@ -211,7 +211,7 @@
     &__extra {
         display: flex;
         justify-content: center;  
-        margin-top: 2%;   
+        margin-top: 4%;   
 
         @media only screen and (max-width: 900px) { 
            display: none;
