--- a/src/components/core/Nav/_Nav.scss
+++ b/src/components/core/Nav/_Nav.scss
@@ -11,7 +11,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-   
+    position: absolute;
+    top: 0;
 
     @media only screen and (max-width: 900px) {    
        height: 100vh;
