--- a/src/components/feature/Info/_Info.scss
+++ b/src/components/feature/Info/_Info.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap');
-
 .info--wrapper {
     width: 70%;
     margin: 0 auto;
@@ -11,7 +9,7 @@
     grid-template-columns: 650px 650px;
     grid-gap: 50px;
     justify-content: center;
-    font-family: 'Montserrat' , sans-serif;
+    font-family: 'Open Sans' , sans-serif;
 
     @media only screen and (max-width: 1760px) {
         grid-template-columns: 550px 550px;
