--- a/src/components/feature/VidContent/_VidContent.scss
+++ b/src/components/feature/VidContent/_VidContent.scss
@@ -12,7 +12,7 @@
         font-weight: 700;
         line-height: 1.5;
         margin: 0 0 1em 0;
-        color: #2fa5a7;
+        color: #1dbac9;;
         text-transform: uppercase;
     }
 
@@ -22,8 +22,8 @@
     }
 
     &--btn {
-        box-shadow: inset 0 0 0 3px #2fa5a7;;
-        color:#2fa5a7;
+        box-shadow: inset 0 0 0 3px #1dbac9;
+        color: #1dbac9;
         border-radius: 5px;
         cursor: pointer;
         display: inline-block;
