--- a/src/components/layout/Card/_Card.scss
+++ b/src/components/layout/Card/_Card.scss
@@ -2,31 +2,57 @@
     width: 25%;
     display: inline-block;
     font-family: 'Montserrat' , sans-serif;
+    margin: 0 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    &__icon {
+        font-size: 2.5em;
+        color: #1dbac9;
+        margin-bottom: .8em;
+    }
 
     &__title {
         font-weight: 700;
         line-height: 1.8;
         margin: 0 0 1em 0;
-        color: #2fa5a7;
+        color: #1dbac9;
         text-transform: uppercase;
     }
 
     &__content {
         font-size: .9em;
         margin-bottom: 2em;
+        width: 92%;
+    }
+
+    &__label {
+        font-size: .9em;
+        margin-bottom: 1em;
+    }
+
+    &__list {
+        font-size: .8em;
+        margin:0 0 1.5em 2em;
+
+        &--item {
+            width: 90%;
+        }
     }
 
     &--btn {
-        box-shadow: inset 0 0 0 3px #2fa5a7;
-        color: #2fa5a7;
+        box-shadow: inset 0 0 0 3px #1dbac9;
+        color: #1dbac9;
         border-radius: 5px;
         cursor: pointer;
         display: inline-block;
-        font-size: .8em;
+        font-size: .7em;
         font-weight: 700;
         line-height: 3.65em;
         padding: 0 2.25em;
         text-decoration: none;
         text-transform: uppercase;
+        width: fit-content;
     }
 }
