--- a/src/components/feature/ContentDivider/_ContentDivider.scss
+++ b/src/components/feature/ContentDivider/_ContentDivider.scss
@@ -22,7 +22,7 @@
     }
 
     &__heading {
-        font-family: 'Bitter';
+        font-family: 'Montserrat' , sans-serif;
         text-align: center;
         font-size: 1.4em;
         color: #fff;
