--- a/src/components/core/Nav/_Nav.scss
+++ b/src/components/core/Nav/_Nav.scss
@@ -287,7 +287,7 @@
 
 #nav:checked ~ .nav__list .nav__list--wrapper {
     background-color: #fff;
-    height: 100vh;
+    height: 4420px;
     justify-content: flex-start;
 }
 
