--- a/src/components/feature/VideoHero/_VideoHero.scss
+++ b/src/components/feature/VideoHero/_VideoHero.scss
@@ -1,12 +1,18 @@
 .section {
     display: flex;
-    width: 70%;
-    align-items: center;
-    flex-direction: column;
-    margin: 0 auto;
-    padding-top: 12%;
+    justify-content: center;
+    padding-top: 320px;
+
+    @media only screen and (max-height: 850px) and (max-width: 1500px) {
+        padding-top: 16%;
+        padding-bottom: 10%;
+    }
 
     &__video {
        width: 870px;
+
+        @media only screen and (max-height: 850px) and (max-width: 1500px) {
+            width: 900px;
+        }
     }
 }
