--- a/src/components/layout/Card/_Card.scss
+++ b/src/components/layout/Card/_Card.scss
@@ -42,8 +42,8 @@
     }
 
     &--btn {
-        box-shadow: inset 0 0 0 3px #1dbac9;
-        color: #1dbac9;
+        background-color: #1dbac9;
+        color: #fff;
         border-radius: 5px;
         cursor: pointer;
         display: inline-block;
