--- a/src/components/core/Footer/_Footer.scss
+++ b/src/components/core/Footer/_Footer.scss
@@ -3,6 +3,7 @@
     background-color: #fff;
     color: rgba(8,27,51,.8);
     font-family: 'Montserrat';
+    min-width: 300px;
 
     &__heading {
         text-align: center;
@@ -26,10 +27,20 @@
             width: 100%;
             justify-content: center;
             margin-bottom: 1%;
+
+            @media only screen and (max-width: 750px) {
+                margin-top: 5%;
+                flex-direction: column;
+                align-items: center;
+            }
         }
 
         &--item {
             list-style-type: none;
+
+            @media only screen and (max-width: 750px) {
+               padding: 0 !important;
+            }
 
             &:first-child {
                 padding-right: 25px;
@@ -131,11 +142,6 @@
         width: 30%;
         text-align: center;
         font-size: 55%;
-        opacity: 0.7;
-    }
-
-    &__updated {
-        font-size: 25%;
         opacity: 0.7;
     }
 }
