--- a/src/components/feature/CardSection/_CardSection.scss
+++ b/src/components/feature/CardSection/_CardSection.scss
@@ -1,7 +1,19 @@
 .cards {
     display: flex;
-    justify-content: center;
-    padding: 8em 0 7em 0;
-    max-width: 82em;
+    padding: 7em 0 7em 0;
+    justify-content: space-around;
+    width: 60%;
+    max-width: 1700px;
+    min-width: 300px;
     margin: 0 auto;
+
+    @media only screen and (max-width: 1800px) {
+        width: 80%;
+    }
+
+    @media only screen and (max-width: 1025px) {
+        flex-direction: column;
+        align-items: flex-start;
+        width: 70%;
+    }
 }
