--- a/src/components/feature/ContentDivider/_ContentDivider.scss
+++ b/src/components/feature/ContentDivider/_ContentDivider.scss
@@ -5,12 +5,24 @@
     background-color: #0c5369;
 
     &--wrapper {
-        max-width: 65em;
-        width: calc(100% - 8em);
+        max-width: 1700px;
+        width: 60%;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
         line-height: 1.5;
+
+        @media only screen and (max-width: 1800px) {
+            width: 76%;
+        }
+     
+         @media only screen and (max-width: 1025px) {
+             width: 70%;
+         }
+
+         @media only screen and (max-width: 500px) {
+            min-width: 300px;
+        }
     }
 
     &__icon {
@@ -27,6 +39,14 @@
         font-size: 1.4em;
         color: #fff;
         margin-bottom: 2.5%;
+
+        @media only screen and (max-width: 1025px) {
+            font-size: 1.1em;
+        }
+
+        @media only screen and (max-width: 750px) {
+            font-size: 1em;
+        }
     }
 
     &__subhead {
@@ -36,6 +56,10 @@
         text-align: center;
         color: #f4f4f4;
         margin-bottom: 3%;
+
+        @media only screen and (max-width: 750px) {
+            margin-bottom: 7%;
+        }
     }
 
     &__button {
