--- a/src/components/feature/VideoHero/_VideoHero.scss
+++ b/src/components/feature/VideoHero/_VideoHero.scss
@@ -1,4 +1,4 @@
-.section {
+.mainhero {
     display: flex;
     justify-content: center;
     padding-top: 320px;
@@ -25,6 +25,10 @@
 
         @media only screen and (max-width: 650px) {
             width: 450px;
+        }
+
+        @media only screen and (max-width: 450px) {
+            display: none;
         }
     }
 }
