--- a/src/components/layout/Card/_Card.scss
+++ b/src/components/layout/Card/_Card.scss
@@ -1,11 +1,15 @@
 .card {
-    width: 25%;
-    display: inline-block;
+    width: inherit;
     font-family: 'Montserrat' , sans-serif;
-    margin: 0 1em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 0 1.5rem;
+
+    @media only screen and (max-width: 1025px) {
+        margin: 0 0 17% 0;
+        width: 100%;
+    }
 
     &__icon {
         font-size: 2.5em;
@@ -19,22 +23,29 @@
         margin: 0 0 1em 0;
         color: #1dbac9;
         text-transform: uppercase;
+        width: fit-content;
     }
 
     &__content {
         font-size: .9em;
         margin-bottom: 2em;
         width: 92%;
+
+        @media only screen and (max-width: 1025px) {
+            width: 100%;
+        }
     }
 
     &__label {
         font-size: .9em;
         margin-bottom: 1em;
+        width: fit-content;
     }
 
     &__list {
         font-size: .8em;
         margin:0 0 1.5em 2em;
+        width: fit-content;
 
         &--item {
             width: 90%;
