--- a/src/components/layout/Card/_Card.scss
+++ b/src/components/layout/Card/_Card.scss
@@ -1,6 +1,7 @@
 .card {
     width: inherit;
     font-family: 'Montserrat' , sans-serif;
+    color: #081b33;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
