--- a/src/components/feature/CardSection/_CardSection.scss
+++ b/src/components/feature/CardSection/_CardSection.scss
@@ -1,6 +1,6 @@
 .cards {
     display: flex;
-    padding: 7em 0 7em 0;
+    padding: 0 0 7em 0;
     justify-content: space-around;
     width: 60%;
     max-width: 1700px;
@@ -8,12 +8,13 @@
     margin: 0 auto;
 
     @media only screen and (max-width: 1800px) {
-        width: 80%;
+        width: 76%;
     }
 
     @media only screen and (max-width: 1025px) {
         flex-direction: column;
         align-items: flex-start;
         width: 70%;
+        padding: 0;
     }
 }
