--- a/src/components/feature/Info/_Info.scss
+++ b/src/components/feature/Info/_Info.scss
@@ -1,8 +1,10 @@
 .info {
     margin: 0 auto;
-    padding: 7em 0 0 0;
+    padding: 7em 0 4em 0;
+    margin-bottom: 3em;
     width: 60%;
     max-width: 1700px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 
     @media only screen and (max-width: 1800px) {
         width: 76%;
