--- a/src/components/feature/ValuesSection/_ValuesSection.scss
+++ b/src/components/feature/ValuesSection/_ValuesSection.scss
@@ -1,31 +1,36 @@
-.corevalues__title {
-    font-family: 'Montserrat' , sans-serif;
-    font-weight: 700;
-    line-height: 1.8;
-    margin: 0 0 1em 0;
-    color: #081b33;
-    text-transform: uppercase;
-    width: 60%;
-    margin: 0 auto;
-    padding: 4em 0 0 0;
+.corevalues {
+    margin-bottom: 3em;
 
-    @media only screen and (max-width: 1800px) {
-        width: 76%;
-    }
+    &__title {
+        font-family: 'Montserrat' , sans-serif;
+        font-weight: 700;
+        line-height: 1.8;
+        margin: 0 0 1em 0;
+        color: #081b33;
+        text-transform: uppercase;
+        width: 60%;
+        margin: 0 auto;
+        padding: 4em 0 0 0;
 
-    @media only screen and (max-width: 1025px) {
-        width: 70%;
+        @media only screen and (max-width: 1800px) {
+            width: 76%;
+        }
+
+        @media only screen and (max-width: 1025px) {
+            width: 70%;
+        }
     }
 }
 
 .valuecards {
     display: flex;
-    padding: 2.5em 0 7em 0;
+    padding: 2.5em 0 1em 0;
     justify-content: space-around;
     width: 60%;
     max-width: 1700px;
     min-width: 300px;
     margin: 0 auto;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 
     @media only screen and (max-width: 1800px) {
         width: 76%;
