--- a/src/components/layout/Card/_Card.scss
+++ b/src/components/layout/Card/_Card.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 0 1.5rem;
+    margin: 0 1.5rem 0 0;
 
     @media only screen and (max-width: 1025px) {
         margin: 0 0 17% 0;
