updated our stories title

--- a/src/components/layout/Testimonial/_Testimonial.scss
+++ b/src/components/layout/Testimonial/_Testimonial.scss
@@ -1,6 +1,6 @@
 .testimonial {
     margin: 0 auto;
-    padding: 0 0 4em 0;
+    padding: 1em 0 4em 0;
     margin-bottom: 3em;
     width: 60%;
     max-width: 1700px;
