--- a/src/components/feature/JCSUinfo/_JCSUinfo.scss
+++ b/src/components/feature/JCSUinfo/_JCSUinfo.scss
@@ -1,16 +1,13 @@
 .jcsuinfo {
     margin-bottom: 3em;
 
-    &__title {
-        font-family: 'Montserrat' , sans-serif;
-        font-weight: 700;
-        line-height: 1.8;
-        margin: 0 0 1em 0;
-        color: #081b33;
-        text-transform: uppercase;
-        width: 60%;
+    &__logo {
+        height: 100px;
+        width: 100px;
+        max-width: 500px;
+        display: block;
         margin: 0 auto;
-        padding: 4em 0 0 0;
+        padding: 5em 0 0 0;
 
         @media only screen and (max-width: 1800px) {
             width: 76%;
