--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-@import './components/layout/_fonts.scss';
+@import url('https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 
 * {
     margin: 0;
