--- a/src/components/shared/HeroLayout/_styles.scss
+++ b/src/components/shared/HeroLayout/_styles.scss
@@ -17,6 +17,12 @@
         text-align: center;
         color: #fff;
     }
+
+    @media only screen and (max-width: 500px) {
+        background: #1dbac9;
+        color: #fff;
+        margin-top: 200px;
+    }
     
     &--wrapper {
         height: inherit;
@@ -46,6 +52,10 @@
             width: 70%;
         }
     
+        @media only screen and (max-width: 500px) {
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     &__title {
@@ -62,6 +72,14 @@
             margin-bottom: 4em;
             text-shadow: -1px 1px 0 rgb(53, 53, 53);
         }
+
+        @media only screen and (max-width: 500px) {
+            text-shadow: none;
+            font-size: 1.3em;
+            text-align: center;
+            margin-bottom: 0;
+        }
+
     }
 
     &__quote {
@@ -109,6 +127,12 @@
         text-align: center;
         color: #fff;
     }
+
+    @media only screen and (max-width: 500px) {
+        background: #1dbac9;
+        color: #fff;
+        margin-top: 200px;
+    }
     
     &--wrapper {
         height: inherit;
@@ -137,6 +161,11 @@
         @media only screen and (max-width: 1025px) {
             width: 70%;
         }
+
+        @media only screen and (max-width: 500px) {
+            justify-content: center;
+            align-items: center;
+        }
     
     }
 
@@ -153,6 +182,13 @@
             padding: 0;
             margin-bottom: 4em;
             text-shadow: -1px 1px 0 rgb(53, 53, 53);
+        }
+
+        @media only screen and (max-width: 500px) {
+            text-shadow: none;
+            font-size: 1.3em;
+            text-align: center;
+            margin-bottom: 0;
         }
     }
 
@@ -201,6 +237,12 @@
         text-align: center;
         color: #fff;
     }
+
+    @media only screen and (max-width: 500px) {
+        background: #1dbac9;
+        color: #fff;
+        margin-top: 200px;
+    }
     
     &--wrapper {
         height: inherit;
@@ -229,6 +271,11 @@
         @media only screen and (max-width: 1025px) {
             width: 70%;
         }
+
+        @media only screen and (max-width: 500px) {
+            justify-content: center;
+            align-items: center;
+        }
     
     }
 
@@ -245,6 +292,13 @@
             padding: 0;
             margin-bottom: 4em;
             text-shadow: -1px 1px 0 rgb(53, 53, 53);
+        }
+
+        @media only screen and (max-width: 500px) {
+            text-shadow: none;
+            font-size: 1.3em;
+            text-align: center;
+            margin-bottom: 0;
         }
     }
 
