--- a/src/components/core/AppNav/_styles.scss
+++ b/src/components/core/AppNav/_styles.scss
@@ -71,7 +71,11 @@
 
             @media only screen and (max-width: 900px) {
                 margin-left: 8%;
-             }
+            }
+
+            @media only screen and (max-width: 450px) {
+                height: 28px;
+            }
         }
     }
 
@@ -131,6 +135,10 @@
                 @media only screen and (max-width: 900px) {
                     margin: 50% 0 4% 0;
                     padding-right: 0px;
+                }
+
+                @media only screen and (max-width: 450px) {
+                   margin-top: 75%;
                 }
             }
 
