--- a/src/components/layout/jcsu/Info/_styles.scss
+++ b/src/components/layout/jcsu/Info/_styles.scss
@@ -1,5 +1,5 @@
 .jcsuinfo {
-    margin-bottom: 3em;
+    margin-bottom: 6em;
 
     &__logo {
         height: 100px;
@@ -15,12 +15,16 @@
         @media only screen and (max-width: 1025px) {
             width: 70%;
         }
+
+        @media only screen and (max-width: 725px) {
+            display: none;
+        }
     }
 }
 
 .jcsucards {
     display: flex;
-    padding: 2.5em 0 1em 0;
+    padding: 2.5em 0 3em 0;
     justify-content: space-around;
     width: 60%;
     max-width: 1700px;
