--- a/src/components/shared/StoryLayout/_styles.scss
+++ b/src/components/shared/StoryLayout/_styles.scss
@@ -26,6 +26,7 @@
         color: #081b33;
         text-transform: uppercase;
         width: 60%;
+        max-width: 1700px;
         margin: 0 auto;
         padding: 0 0 2em 0;
 
