--- a/src/components/layout/program/Values/_styles.scss
+++ b/src/components/layout/program/Values/_styles.scss
@@ -9,6 +9,7 @@
         color: #081b33;
         text-transform: uppercase;
         width: 60%;
+        max-width: 1700px;
         margin: 0 auto;
         padding: 4em 0 0 0;
 
